--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,3 @@
-db.sqlite3
+Companies/static/logo
 __pycache__
-db.sqlite3
-migrations
-gitigoner
-gitignore
-.gitigoner
-db.sqlite3
-venv
-*.py
-CustomerFeedback/*.pyc
-Companies/*.pyc
-Customer/*.pyc
-Employees/*.pyc
+ven
